--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,6 +8,16 @@
     <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
+    <nav>
+      <div class="header">
+        <a href="/"><h1>Home Page</h1></a>
+      </div>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
     <h1>About Page</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
