--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,17 @@
     <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
-    <h1>Home Page</h1>
-    <h3>You should render another page!</h3>
+    <nav>
+      <div class="header">
+        <a href="/"><h1>Home Page</h1></a>
+      </div>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <h3>You should try rendering another page!</h3>
   </body>
 </html>
