Finalize readme. Project Complete.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
-
+    <h1>HOME Express makes routing easy</h1>
     <h3>You should try rendering another page!</h3>
   </body>
 </html>
